@@ -10,6 +10,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* set_piece_deadline() also unfilters the piece (if its priority is 0)
 	* add work-around for bug in windows vista and earlier in GetOverlappedResult
 	* fix traversal algorithm leak in DHT
 	* fix string encoding conversions on windows
